# Meghan2026vertexai

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  cloudrun-service.yaml  testing_guide.md
.antigravity/: mission.md
profiles/: aria_receptionist.yaml  jules_architect.yaml  mark_closer.yaml  neuro_agent_template.yaml
src/: audio_util.rs  error.rs  hot_reload.rs  main.rs  models.rs  session_manager.rs  twilio_bridge.rs  vertex_client.rs  web_bridge.rs
web-client/: package-lock.json  package.json
web-client/src/: App.css  App.tsx
web-client/src/lib/: AudioStream.ts
